# adjust-brightness

./: .gitignore  CMakeLists.txt  README.md
src/: adjust_brightness.cl  main.c
